修改对其样式

--- a/greyhawk/exercise-1.org
+++ b/greyhawk/exercise-1.org
@@ -1,4 +1,5 @@
-** 练习1-1 在你自己的系统中运行 “hello, world” 程序。 再有意去掉程序中的部分内容，看看会得到什么出错信息。
+** 练习1-1 
+在你自己的系统中运行 “hello, world” 程序。 再有意去掉程序中的部分内容，看看会得到什么出错信息。
 #+BEGIN_SRC C
   #include <stdio.h>
 
@@ -13,7 +14,8 @@
 #+RESULTS:
 | hello | world |
 
-** 练习1-2 做个实验，当printf函数的参数字符串中包含\c(其中c是上面的转义字符串序列中未曾列出的某一个字符）时，观察一下会出现什么情况。
+** 练习1-2
+做个实验，当printf函数的参数字符串中包含\c(其中c是上面的转义字符串序列中未曾列出的某一个字符）时，观察一下会出现什么情况。
 
 #+BEGIN_SRC C
 
