--- a/greyhawk/exercise-1.org
+++ b/greyhawk/exercise-1.org
@@ -86,7 +86,7 @@
   {
     float fahr, celsius;
     int lower, upper, step;
-
+  
     lower = 0;
     upper = 100;
     step = 10;
@@ -120,3 +120,47 @@
 
 
 ** 练习1-5
+修改温度转换程序，要求以逆序打印温度转换表
+
+#+BEGIN_SRC C
+  #include <stdio.h>
+
+  int main()
+  {
+    float fahr, celsius;
+    int lower, upper, step;
+
+    lower = 0;
+    upper = 300;
+    step = 20;
+
+    fahr = upper;
+    printf("%3s %6s\n", "fahr", "celsius");
+    printf("%3s %6s\n", "---", "------");
+    while(fahr >= lower) {
+      celsius = (5.0 / 9.0) * (fahr - 32.0);
+      printf("%3.0f %6.1f\n", fahr, celsius);
+      fahr = fahr - step;
+    }
+  }
+#+END_SRC
+
+#+RESULTS:
+| fahr | celsius |
+|  --- |  ------ |
+|  300 |   148.9 |
+|  280 |   137.8 |
+|  260 |   126.7 |
+|  240 |   115.6 |
+|  220 |   104.4 |
+|  200 |    93.3 |
+|  180 |    82.2 |
+|  160 |    71.1 |
+|  140 |    60.0 |
+|  120 |    48.9 |
+|  100 |    37.8 |
+|   80 |    26.7 |
+|   60 |    15.6 |
+|   40 |     4.4 |
+|   20 |    -6.7 |
+|    0 |   -17.8 |
