完成c程序设计语言练习2.1

--- a/greyhawk/exercise-1.org
+++ b/greyhawk/exercise-1.org
@@ -593,3 +593,11 @@ int main()
     }
   }
 #+END_SRC
+** 练习1-20
+编写程序detab, 将输入中的制表符替换成适当数目的空格，使空格充满到下一个制表符终止位的地方。假设制表符终止位的位置是固定的,
+比如每隔n列就会出现一个制表符终止位。n应该作为变量还是符号常量呢？
+#+BEGIN_SRC C
+
+#+END_SRC
+
+#+RESULTS:
